:globe_with_meridians: переведены все пункты меню на английский язык (кнопка перевода доделана)

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,3 +1,25 @@
 {
-  "file": "File"
+  "file": "File",
+  "new_1": "New",
+  "open": "Open",
+  "close": "Close",
+  "save": "Save",
+  "save_as": "Save as",
+  "exit": "Exit",
+  "edit": "Edit",
+  "select_all": "Select all",
+  "cut": "Cut",
+  "copy": "Copy",
+  "paste": "Paste",
+  "view": "View",
+  "font": "Font",
+  "design_theme": "Design theme",
+  "search": "Search",
+  "find": "Find",
+  "replace": "Replace",
+  "help": "Help",
+  "reference": "Reference",
+  "about_program": "About program",
+  "what_to_find": "What to find?",
+  "what_to_replace": "What to replace it with?"
 }
