--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -21,5 +21,7 @@
   "reference": "Справка",
   "about_program": "О программе",
   "what_to_find": "Что найти?",
-  "what_to_replace": "На что заменить?"
+  "what_to_replace": "На что заменить?",
+  "reference_text": "wrod - текстовый редактор\nГоряие клавиши:\nCTRL+A - выделить весь текст.\nCTRL+X - вырезать выделенный текст.\nCTRL+C - копировать выделенный текст.\nCTRL+V - вставить выделенный текст.",
+  "about_program_text": "Текстовый редактор (Лабораторная работа №1)\nВерсия 1.0\n© 2023 \"Левая палочка Твикс\" - команда студентов гуппы 4БПМИ-ПТ ФГБОУ ВО \"МАГУ\"\nКроссплатформенное приложение разработанное в рамках дисциплины \"Основы разработки кросс-платформенных приложений\""
 }
